--- a/card-game/src/app/home/home.component.html
+++ b/card-game/src/app/home/home.component.html
@@ -1,3 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
 <h2>{{game.playerA.name}} VS {{game.playerB.name}}</h2>
+
+<button mat-raised-button (click)="createGame()">Create game</button><br/><br/>
+<button mat-raised-button (click)="getGame()">Get game</button><br/><br/>
+<mat-card>Simple card</mat-card>
