--- a/card-game/src/app/card/card.component.html
+++ b/card-game/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <mat-card class="game-card">
-    <h2 class="name">{{card.name}}</h2>
-    <h2 class="hp">{{card.maxHp}}</h2>
+    <h2 (click)="callTargetCard()" class="name">{{boardCard.card.name}}</h2>
+    <h2 class="hp">{{boardCard.currentHp}}</h2>
 
-    <p *ngFor="let abilitie of card.abilities; let i = index">{{abilitie}}</p>
+    <p (click)="callPickAbility(ability)" *ngFor="let ability of boardCard.card.abilities; let i = index">{{ability}}</p>
 </mat-card>
