--- a/card-game/src/app/testboard/testboard.component.html
+++ b/card-game/src/app/testboard/testboard.component.html
@@ -1,6 +1,5 @@
 <button mat-raised-button (click)="createGame()">Create game</button><br/><br/>
-<button mat-raised-button (click)="getGame()">Get game</button><br/><br/>
 
-<app-game [id]="game.gameId" [player]="game.playerA"></app-game>
+<app-game [id]="gameId" [playerId]="playerA"></app-game>
 
-<app-game [id]="game.gameId" [player]="game.playerB"></app-game>
+<app-game [id]="gameId" [playerId]="playerB"></app-game>
