--- a/card-game/src/styles.scss
+++ b/card-game/src/styles.scss
@@ -7,5 +7,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 body{
-    background-color: goldenrod;
+    background-color: #654800;
 }
