Ability tooltip and special abilities

--- a/card-game/src/app/card/card.component.html
+++ b/card-game/src/app/card/card.component.html
@@ -6,5 +6,45 @@
     [matTooltip]="'max: ' + boardCard.card.maxHp" matTooltipPosition="above">{{boardCard.currentHp}}</h2>
 
     <p (click)="callCardClick(ability.abilityId)" *ngFor="let ability of boardCard.card.abilities; let i = index"
-    [ngClass]="{'pickedAbility': pickedAbility === ability.baseAbility}">{{ability.baseAbility}}</p><br/>
+    [ngClass]="{'pickedAbility': pickedAbility === ability.baseAbility}" (mouseenter)='showTooltip(ability.name, ability.baseAbility, ability.specialAbility)' (mouseleave)='hideTooltip()'>{{ability.name}}</p><br/>
 </mat-card>
+
+<div class="tooltip" *ngIf="tooltip != ''">
+    <h3>{{ abilityName }}</h3>
+    <ng-container *ngIf="tooltip =='HIT'"><p>Hits an enemy target for {{ boardCard.currentPower * 1 }} damage. 
+        Gets countered by COUNTER and MAGIC.</p>
+        <p *ngIf="specialAbility =='CLEAVE'">POWER UP: Cleaves the whole enemy team.</p>
+    </ng-container>
+
+    <ng-container *ngIf="tooltip =='HEAL'"><p>Heals a friendly target for {{ boardCard.currentPower * 1.5 }} health. 
+        Gets countered by COUNTER and HIT.</p>
+        <p *ngIf="specialAbility =='CLEAVE'">POWER UP: Heals your whole team.</p>
+    </ng-container>
+
+    <ng-container *ngIf="tooltip =='SHOOT'"><p>Shoots an enemy target for {{ boardCard.currentPower * 1 }} damage. 
+        Gets countered by BARRIER and HEAL.</p>
+        <p *ngIf="specialAbility =='CLEAVE'">POWER UP: Shoots at every enemy.</p>
+    </ng-container>
+
+    <ng-container *ngIf="tooltip =='MAGIC'"><p>Deals magic damage to an enemy target for {{ boardCard.currentPower * 1 }} damage. 
+        Gets countered by BARRIER and SHOOT.</p>
+        <p *ngIf="specialAbility =='CLEAVE'">POWER UP: Hits all enemies.</p>
+    </ng-container>
+
+    <ng-container *ngIf="tooltip =='BARRIER'"><p>Forms a barrier against SHOOT and MAGIC. 
+        Heals your party for 2 when it succeeds.</p>
+    </ng-container>
+
+    <ng-container *ngIf="tooltip =='COUNTER'"><p>Counters HIT and HEAL. 
+        Deals {{ boardCard.currentPower * 1 }} damage to an enemy target on when it succeeds.</p>
+        <p *ngIf="specialAbility =='CLEAVE'">POWER UP: Hits all enemies in retaliation.</p>
+    </ng-container>
+
+    <ng-container *ngIf="tooltip =='PREPARE'"><p>Prepares for the next turn.</p>
+    </ng-container>
+
+    <ng-container *ngIf="tooltip =='TAUNT'"><p>Taunts the enemy, forcing them to target you.</p>
+    </ng-container>
+
+    
+</div>
