--- a/card-game/src/app/game/game.component.scss
+++ b/card-game/src/app/game/game.component.scss
@@ -11,24 +11,22 @@
     margin: 20px;
     margin-right:60px;
     max-width: 550px;
+    color:white;
 }
 
 .board_side{
-    background-color: #bf9221;
+    background-color: #3c3c3c;
     border-radius: 5px;
     padding: 20px;
     min-width: 520px;
     min-height: 300px;
-    h2{
-        margin:10px;
-    }
 }
 
 .actions_container{
     margin-top: 20px;
     margin-bottom: 20px;
     text-align: center;
-    background-color: #866410;
+    background-color: #3c3c3c;
     border-radius: 5px;
     color: white;
     width: 100%;
