--- a/card-game/src/app/card/card.component.scss
+++ b/card-game/src/app/card/card.component.scss
@@ -40,3 +40,17 @@
 .powerUp{
     box-shadow:0px 0px 0px 2px green inset;
 }
+
+.tooltip{
+    position: fixed;
+    background-color: #202020ee;
+    border: 2px solid black;
+    color:white;
+    width: 500px;
+    height: 100px;
+    padding: 15px;
+    border-radius: 4px;
+    bottom: 50px;
+    right: 50px;
+    z-index: 1000;
+}
