--- a/card-game/src/app/game/game.component.scss
+++ b/card-game/src/app/game/game.component.scss
@@ -10,7 +10,7 @@
 .game_container{
     margin: 20px;
     margin-right:60px;
-    max-width: 550px;
+    max-width: 770px;
     color:white;
 }
 
@@ -18,8 +18,8 @@
     background-color: #3c3c3c;
     border-radius: 5px;
     padding: 20px;
-    min-width: 520px;
     min-height: 300px;
+    margin-bottom: 10px;
 }
 
 .actions_container{
