--- a/card-game/src/app/card/card.component.scss
+++ b/card-game/src/app/card/card.component.scss
@@ -1,15 +1,65 @@
 .game-card{
-    width: 120px;
-    height: 195px;
-    margin: 10px;
+    width: 200px;
+    height: 240px;
+    margin: 5px;
     display: inline-block;
     vertical-align: text-top;
 }
 
+span.ability{
+    margin-right:15px;
+}
+
 .hp{
     position: absolute;
-    right: 18px;
-    top: 18px;
+    font-size: 14px;
+    right: 15px;
+    top: 16px;
+    color: #7a1027;
+}
+
+.hp.orange{
+    color: #975415;
+}
+
+.hp.yellow{
+    color: #6d7500;
+}
+
+.hp.green{
+    color: #097028;
+}
+
+.healthbar{
+    margin-bottom: 20px;
+}
+
+.healthbar ::ng-deep .mat-progress-bar-fill::after {
+    background-color: #7a1027;
+}
+
+.healthbar.orange ::ng-deep .mat-progress-bar-fill::after {
+    background-color: #975415;
+}
+
+.healthbar.yellow ::ng-deep .mat-progress-bar-fill::after {
+    background-color: #6d7500;
+}
+
+.healthbar.green ::ng-deep .mat-progress-bar-fill::after {
+    background-color: #097028;
+}
+
+::ng-deep .mat-progress-bar-background {
+    fill: none;
+}
+
+::ng-deep .mat-progress-bar-buffer {
+    background: #00000030;
+}
+
+::ng-deep .mat-progress-bar {
+    border-radius: 2px;
 }
 
 .power{
@@ -17,28 +67,28 @@
 }
 
 .picked{
-    background-color: gainsboro;
+    box-shadow:0px 0px 0px 2px rgb(245, 179, 58) inset;
 }
 
 .pickedAbility{
-    font-weight: bold;
-    color: red;
+    color: rgb(189, 140, 33);
+    text-decoration: underline;
+}
+
+.onCooldown{
+    color: #00000050;
+}
+
+.status{
+    font-size: 10px;
 }
 
 .target{
-    border: 2px solid red;
-}
-
-.damaged{
-    color: red;
+    box-shadow:0px 0px 0px 2px rgb(187, 28, 28) inset;
 }
 
 .dead{
-    background-color:black;
-}
-
-.powerUp{
-    box-shadow:0px 0px 0px 2px green inset;
+    background-color:#540517;
 }
 
 .tooltip{
