--- a/card-game/src/app/game/game.component.scss
+++ b/card-game/src/app/game/game.component.scss
@@ -12,13 +12,14 @@
     margin-right:60px;
     max-width: 770px;
     color:white;
+    padding-bottom: 200px;
 }
 
 .board_side{
-    background-color: #3c3c3c;
+    background-color: #252338;
     border-radius: 5px;
     padding: 20px;
-    min-height: 300px;
+    min-height: 200px;
     margin-bottom: 10px;
 }
 
@@ -26,7 +27,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     text-align: center;
-    background-color: #3c3c3c;
+    background-color: #252338;
     border-radius: 5px;
     color: white;
     width: 100%;
@@ -35,7 +36,7 @@
     }
 }
 
-.recruitCard{
+.recruitChampion{
     width: 110px;
     height: 150px;
     display: inline-block;
